Fonts specified. Fixed status wrapping.

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+  font-family: Verdana, Geneva, sans-serif;
+}
+
 body {
   background-color: #fafafa;
 }
@@ -36,9 +40,11 @@ body {
   vertical-align: middle;
   height: 50px;
   bottom: 10px;
+  width: 49vw;
 }
 
 textarea {
+  font-family: "Lucida Console", Monaco, monospace;
   font-size: 16px;
   width:98%;
   border: 1px solid gray;
@@ -59,6 +65,7 @@ textarea:read-only {
 }
 
 .pretty-button {
+  font-family: Arial, Helvetica, sans-serif;
   background-color : black;
   border: 2px solid black;
   color: white;
